--- a/src/app/hero-first/hero-first.component.css
+++ b/src/app/hero-first/hero-first.component.css
@@ -1,3 +1,13 @@
 .btn{
   background-color: blueviolet;
 }
+
+.bg-red{
+  background-color: red;
+}
+.bg-green{
+  background-color: green;
+}
+.bg-yellow{
+  background-color: yellow;
+}
