link front end with backend and make http post request

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,5 +1,5 @@
 <div class="row mt-4">
-  <div class="col-3" *ngFor="let item of _shared.hero">
+  <div class="col-3" *ngFor="let item of _shared.heros">
     <div
       class="card p-1"
       [ngClass]="{
